--- a/functions/views/test.hbs
+++ b/functions/views/test.hbs
@@ -5,7 +5,7 @@
 		<title>{{title}}</title>
 	</head>
 	<body>
-		Agregando feature!
+		Agregando feature 1
 		{{#persons}}
 			<b>{{name}}</b>
 			{{/persons}}
