--- a/functions/views/shop.hbs
+++ b/functions/views/shop.hbs
@@ -33,8 +33,8 @@
     </div>
   </nav>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4">Pricing</h1>
-      <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It's built with default Bootstrap components and utilities with little customization.</p>
+      <h1 class="display-4">Precios</h1>
+      
     </div>
 
     <div class="container">
@@ -46,10 +46,10 @@
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>10 users included</li>
-              <li>2 GB of storage</li>
-              <li>Email support</li>
-              <li>Help center access</li>
+              <li>Scrum classes</li>
+              <li>Kankan classes</li>
+              <li>40 posits</li>
+              <li>Yammer</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
           </div>
@@ -61,10 +61,11 @@
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>20 users included</li>
-              <li>10 GB of storage</li>
-              <li>Priority email support</li>
-              <li>Help center access</li>
+             <li>Scrum classes</li>
+              <li>Kankan classes</li>
+              <li>100 posits</li>
+              <li>Yammer</li>
+              <li>StarsWars Lego (to work in class)</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
           </div>
@@ -75,15 +76,15 @@
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li>30 users included</li>
-              <li>15 GB of storage</li>
-              <li>Phone and email support</li>
-              <li>Help center access</li>
-            </ul>
+            <li>Scrum, Kanban, Lean classes</li>
+            <li>unlimited posits</li>
+            <li>Yammer</li>
+            <li>StarsWars Lego (to work in your home)</li>
             <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
           </div>
         </div>
+
+
 
         
       </div>
