--- a/functions/views/shop.hbs
+++ b/functions/views/shop.hbs
@@ -28,13 +28,13 @@
 
     <nav>
     <div class="nav-wrapper teal lighten-1">
-      <a href="#" class="brand-logo">Logo</a>
+      <a href="#" class="brand-logo">TeamWare - Agile Coaching</a>
      
     </div>
   </nav>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4">Precios</h1>
-      
+      <h1 class="display-4">Pricing</h1>
+       <p class="lead">Bueno, bonito y barato.</p>
     </div>
 
     <div class="container">
@@ -61,8 +61,7 @@
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-             <li>Scrum classes</li>
-              <li>Kankan classes</li>
+             <li>Scrum & Kankan classes</li>
               <li>100 posits</li>
               <li>Yammer</li>
               <li>StarsWars Lego (to work in class)</li>
@@ -76,10 +75,12 @@
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
+             <ul class="list-unstyled mt-3 mb-4"></ul>
             <li>Scrum, Kanban, Lean classes</li>
             <li>unlimited posits</li>
             <li>Yammer</li>
             <li>StarsWars Lego (to work in your home)</li>
+            </ul>
             <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
           </div>
         </div>
