--- a/functions/views/shop.hbs
+++ b/functions/views/shop.hbs
@@ -75,7 +75,7 @@
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-             <ul class="list-unstyled mt-3 mb-4"></ul>
+             <ul class="list-unstyled mt-3 mb-4">
             <li>Scrum, Kanban, Lean classes</li>
             <li>unlimited posits</li>
             <li>Yammer</li>
@@ -86,7 +86,26 @@
         </div>
 
 
+        <!--
 
+         <div class="card mb-4 box-shadow">
+          <div class="card-header">
+            <h4 class="my-0 font-weight-normal">Gold</h4>
+          </div>
+          <div class="card-body">
+            <h1 class="card-title pricing-card-title">$40 <small class="text-muted">/ mo</small></h1>
+             <ul class="list-unstyled mt-3 mb-4">
+            <li>We teach you whatever you want</li>
+            <li>Summits with Cockburn</li>
+            <li>unlimited posits</li>
+            <li>StarsWars Lego (you can loose pieces)</li>
+            </ul>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
+          </div>
+        </div>
+
+
+        -->
         
       </div>
 
