--- a/functions/views/shop.hbs
+++ b/functions/views/shop.hbs
@@ -77,7 +77,7 @@
             <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
              <ul class="list-unstyled mt-3 mb-4">
             <li>Scrum, Kanban, Lean classes</li>
-            <li>unlimited posits</li>
+            <li>Unlimited posits</li>
             <li>Yammer</li>
             <li>StarsWars Lego (to work in your home)</li>
             </ul>
@@ -87,7 +87,7 @@
 
 
 
-        <!--
+        
 
          <div class="card mb-4 box-shadow">
           <div class="card-header">
@@ -96,9 +96,9 @@
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$40 <small class="text-muted">/ mo</small></h1>
              <ul class="list-unstyled mt-3 mb-4">
-            <li>We teach you whatever you want</li>
+            <li>We teach you anything</li>
             <li>Summits with Cockburn</li>
-            <li>unlimited posits</li>
+            <li>Unlimited posits</li>
             <li>StarsWars Lego (you can loose pieces)</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
@@ -106,7 +106,7 @@
         </div>
 
 
-        -->
+        
         
       </div>
 
