--- a/functions/views/shop.hbs
+++ b/functions/views/shop.hbs
@@ -96,7 +96,7 @@
           <div class="card-body">
             <h1 class="card-title pricing-card-title">$40 <small class="text-muted">/ mo</small></h1>
              <ul class="list-unstyled mt-3 mb-4">
-            <li>We teach you anything</li>
+            <li>Continuous  Integration classes</li>
             <li>Summits with Cockburn</li>
             <li>Unlimited posits</li>
             <li>StarsWars Lego (you can loose pieces)</li>
