--- a/functions/views/vote.hbs
+++ b/functions/views/vote.hbs
@@ -52,176 +52,68 @@
   </div>
   <main >
     <div ><!-- Your content goes here -->
-        <div class="container">
+        <div class="container"  id="app-4">
 
           
 
 
   <div class="row">
   	
-  		<div class="col-md-4">
-  			<ul class="demo-list-item mdl-list">
-				  <li class="mdl-list__item">
-				   
-					 <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
-				  <input type="radio" id="option-1" class="mdl-radio__button" name="comparsa" value="1" checked>
-				  <span class="mdl-radio__label">Ara Sunú</span>
-				</label>
-
-
-				  </li>
-
-				  <li class="mdl-list__item">
-					    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
-					  	<input type="radio" id="option-2" class="mdl-radio__button" name="comparsa" value="2">
-					 	<span class="mdl-radio__label">Hawaianas</span>
-						</label>
-
-				  </li>
-
-
-				  <li class="mdl-list__item">
-				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-3">
-					  <input type="radio" id="option-3" class="mdl-radio__button" name="comparsa" value="3">
-				  		<span class="mdl-radio__label">La Nueva </span>
-					</label>
-
-				  </li>
-
-				  <li class="mdl-list__item">
-				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-4">
-					  <input type="radio" id="option-4" class="mdl-radio__button" name="comparsa" value="4">
-				  		<span class="mdl-radio__label">Bahia </span>
-					</label>
-
-				  </li>
-
-				  <li class="mdl-list__item">
-				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-5">
-					  <input type="radio" id="option-5" class="mdl-radio__button" name="comparsa" value="5">
-				  		<span class="mdl-radio__label">Samberos </span>
-					</label>
-
-				  </li>
-				</ul>
-  			
-  		</div>
-
-  		<div class="col-md-4 ">     
-  			<ul class="demo-list-item mdl-list">
-				  <li class="mdl-list__item">
-				   
-					 <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-6">
-				  <input type="radio" id="option-6" class="mdl-radio__button" name="reina" value="1" checked>
-				  <span class="mdl-radio__label">Reina 1</span>
-				</label>
-
-
-				  </li>
-
-				  <li class="mdl-list__item">
-					    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-7">
-					  	<input type="radio" id="option-7" class="mdl-radio__button" name="reina" value="2">
-					 	<span class="mdl-radio__label">Reina 2</span>
-						</label>
-
-				  </li>
-
-
-				  <li class="mdl-list__item">
-				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-8">
-					  <input type="radio" id="option-8" class="mdl-radio__button" name="reina" value="3">
-				  		<span class="mdl-radio__label">Reina 3 </span>
-					</label>
-
-				  </li>
-
-				  <li class="mdl-list__item">
-				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-9">
-					  <input type="radio" id="option-9" class="mdl-radio__button" name="reina" value="4">
-				  		<span class="mdl-radio__label">Reina 4 </span>
-					</label>
-
-				  </li>
-
-				  <li class="mdl-list__item">
-				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-10">
-					  <input type="radio" id="option-10" class="mdl-radio__button" name="reina" value="5">
-				  		<span class="mdl-radio__label">Reina 5 </span>
-					</label>
-
-				  </li>
-				</ul>
-  			
-  		</div>
-
-  		<div class="col-md-4 ">
-  			<ul class="demo-list-item mdl-list">
-				   <li class="mdl-list__item">
-                     <span class="mdl-list__item-primary-content">
-                    <i class="material-icons mdl-list__item-avatar">person</i>
-                    <span>Ara Sunú</span>
-                    </span>
-				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-11">
-					  <input type="radio" id="option-11" class="mdl-radio__button" name="scola" value="1">
-				  		
-					</label>
-
-				  </li>
-
+  		<div class="col-md-4"> 
+  			<ul class="demo-list-item mdl-list" v-for="comparsa of comparsas">
 				    <li class="mdl-list__item">
                      <span class="mdl-list__item-primary-content">
                     <i class="material-icons mdl-list__item-avatar">person</i>
-                    <span>Hawaianas</span>
+                    <span>\{{comparsa.text}}</span>
                     </span>
-				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-12">
-					  <input type="radio" id="option-12" class="mdl-radio__button" name="scola" value="2">
+				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" :for="'option-' + comparsa.nro">
+					  <input type="radio" :id="'option-' + comparsa.nro" class="mdl-radio__button" name="comparsa" :value="comparsa.nro">
 				  		
-					</label>
+						</label>
 
 				  </li>
-
-
-				  <li class="mdl-list__item">
-                     <span class="mdl-list__item-primary-content">
-                    <i class="material-icons mdl-list__item-avatar">person</i>
-                    <span>La Nueva</span>
-                    </span>
-				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-13">
-					  <input type="radio" id="option-13" class="mdl-radio__button" name="scola" value="3">
-				  		
-					</label>
-
-				  </li>
-            <li>
-				 <div class="mdl-list__item">
-                    <span class="mdl-list__item-primary-content">
-                    <i class="material-icons mdl-list__item-avatar">person</i>
-                    <span>Bahia</span>
-                    </span>
-                    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-14">
-                        <input type="radio" id="option-14" class="mdl-radio__button" name="scola" value="4">
-                    </label>
-                </div>
-            </li>
-				  <li class="mdl-list__item">
-                     <span class="mdl-list__item-primary-content">
-                    <i class="material-icons mdl-list__item-avatar">person</i>
-                    <span>Samberos</span>
-                    </span>
-				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-15">
-					  <input type="radio" id="option-15" class="mdl-radio__button" name="scola" value="5">
-				  		
-					</label>
-
-				  </li>
+				 
 				</ul>
   			
   		</div>
 
+				<div class="col-md-4 ">     
+					
+							<ul class=" mdl-list" v-for="reina of reinas">
+							<li class="mdl-list__item">
+											<span class="mdl-list__item-primary-content">
+											<i class="material-icons mdl-list__item-avatar">person</i>
+											<span>\{{reina.text}}</span>
+											</span>
+							<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" :for="'option-' + reina.nro">
+							<input type="radio" :id="'option-' + reina.nro" class="mdl-radio__button" name="reina" :value="reina.nro">
+							</label>
+
+							</li>
+					
+							</ul>
+									
+				</div>
+
+  		<div class="col-md-4 ">
+  			<ul class="demo-list-item mdl-list" v-for="bateria of baterias">
+				   <li class="mdl-list__item">
+                     <span class="mdl-list__item-primary-content">
+                    <i class="material-icons mdl-list__item-avatar">person</i>
+                    <span>\{{bateria.text}}</span>
+                    </span>
+				    <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" :for="'option-' + bateria.nro">
+					  <input type="radio" :id="'option-' + bateria.nro" class="mdl-radio__button" name="bateria" :value="bateria.nro">
+				  	</label>
+				  </li>
+
+			</ul>
+  			
+ 		</div>
+
   </div>
 
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent center btn-block" type="submit">
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent center btn-block" v-on:click="votar">
   Votar ! 
 </button>
       </div>
@@ -237,10 +129,98 @@
   </main>
 </div>
     
-        
+ <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-firestore.js"></script>	
+
+    
       
     
-  
+  <!-- development version, includes helpful console warnings -->
+		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+		<script>
+		var app4 = new Vue({
+			el: '#app-4',
+			data: {
+				
+				comparsas: [
+					{ text: 'Bahia', nro: 1   },
+					{ text: 'Hawaianas', nro: 2   },
+					{ text: 'La Nueva', nro: 3  },
+					{ text: 'Samberos', nro: 4  },
+					{ text: 'Ara Sunu', nro: 5  }
+				],
+				reinas: [
+					{ text: 'reina1', nro: 6 },
+					{ text: 'reina2', nro: 7 },
+					{ text: 'reina3', nro: 8 },
+					{ text: 'reina4', nro: 9 },
+					{ text: 'reina5', nro: 10 }
+				],
+				baterias: [
+					{ text: 'Bahia' , nro: 11    },
+					{ text: 'Hawaianas', nro: 12  },
+					{ text: 'La Nueva', nro: 13  },
+					{ text: 'Samberos', nro: 14  },
+					{ text: 'Ara Sunu', nro: 15  }
+				]
+			
+			},
+			methods: {
+				votar : function(){
+				const entradas =	document.getElementsByTagName("input");
+				var comp, bat , rei; 
+				for (i=0; i< entradas.length - 1; i++) {
+
+					if (entradas[i].checked ){
+						
+						switch(entradas[i].getAttribute("name")) {
+							case "comparsa":
+									comp = parseInt(entradas[i].value);
+									
+							case "reina":
+									rei = parseInt(entradas[i].value);
+									
+							case "bateria":
+									bat = parseInt(entradas[i].value);
+							}
+
+					}
+
+				
+				}
+				var config = {
+							apiKey: "AIzaSyAoCjAzSrabZ5iR4d-zMaJNBlGL_5K8WXw",
+							authDomain: "agilesapp-bf9e7.firebaseapp.com",
+							databaseURL: "https://agilesapp-bf9e7.firebaseio.com",
+							projectId: "agilesapp-bf9e7",
+							storageBucket: "agilesapp-bf9e7.appspot.com",
+							messagingSenderId: "799460737214"
+						};  
+					console.log(comp,bat,rei, this.comparsas[0].text);
+					console.log(document.getElementsByTagName("input")[0].checked );	
+					firebase.initializeApp(config);
+					var db = firebase.firestore();
+   				db.settings({ timestampsInSnapshots: true }); 
+
+				 function test (){	db.collection('votos').add({
+					usuario: 8,
+					fecha: "",
+					rubros: {
+						bateria: this.baterias[bat].text,
+						comparsa: this.comparsas[comp].text,
+						reina: this.reinas[rei].text
+
+				}
+					})
+					console.log("works");
+				}
+				test();
+				}
+			}			
+		})
+
+</script>
+
   
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> 
