--- a/functions/views/vote.hbs
+++ b/functions/views/vote.hbs
@@ -18,7 +18,9 @@
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-orange.min.css" />
 
-
+	<style>
+		noPadd { padding: 0px; }
+	</style>
     
             
 
@@ -54,9 +56,9 @@
   <div class="row">
 	
   		<div class="col-md-4"> 
-					
-  			<ul class="demo-list-item mdl-list" v-for="comparsa of comparsas">
-				    <li class="mdl-list__item">
+					<h3>Comparsas</h3><hr>
+  			<ul class="demo-list-item mdl-list" v-for="comparsa of comparsas" >
+				    <li class="mdl-list__item" style=" padding: 1px; ">
                      <span class="mdl-list__item-primary-content">
                     <i class="material-icons mdl-list__item-avatar">person</i>
                     <span>\{{comparsa.text}}</span>
@@ -73,9 +75,9 @@
   		</div>
 
 				<div class="col-md-4 ">     
-					
+				 <h3>Reinas</h3><hr>
 							<ul class=" mdl-list" v-for="reina of reinas">
-							<li class="mdl-list__item">
+							<li class="mdl-list__item noPadd" style=" padding: 1px; " >
 											<span class="mdl-list__item-primary-content">
 											<i class="material-icons mdl-list__item-avatar">person</i>
 											<span>\{{reina.text}}</span>
@@ -91,8 +93,10 @@
 				</div>
 
   		<div class="col-md-4 ">
+				<h3>Baterias</h3>
+				<hr>
   			<ul class="demo-list-item mdl-list" v-for="bateria of baterias">
-				   <li class="mdl-list__item">
+				   <li class="mdl-list__item" style=" padding: 1px; ">
                      <span class="mdl-list__item-primary-content">
                     <i class="material-icons mdl-list__item-avatar">person</i>
                     <span>\{{bateria.text}}</span>
