--- a/functions/views/dashboard.hbs
+++ b/functions/views/dashboard.hbs
@@ -7,9 +7,13 @@
        * TODO(DEVELOPER): Paste the initialization snippet from:
        * Firebase Console > Overview > Add Firebase to your web app. *
        ***************************************************************************************** -->
-       
+       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase.js"></script>
+ <!-- development version, includes helpful console warnings -->
+		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    
 <script>
+  
   // Initialize Firebase
   var config = {
     apiKey: "AIzaSyAoCjAzSrabZ5iR4d-zMaJNBlGL_5K8WXw",
@@ -19,10 +23,11 @@
     storageBucket: "agilesapp-bf9e7.appspot.com",
     messagingSenderId: "799460737214"
   };
-  firebase.initializeApp(config);
+  firebase.initializeApp(config); 
 </script>
     <script type="text/javascript">
       initApp = function() {
+     
         firebase.auth().onAuthStateChanged(function(user) {
           if (user) {
             // User is signed in.
@@ -30,23 +35,10 @@
             var email = user.email;
             var emailVerified = user.emailVerified;
             var photoURL = user.photoURL;
-            var uid = user.uid;
-            var phoneNumber = user.phoneNumber;
-            var providerData = user.providerData;
-            user.getIdToken().then(function(accessToken) {
-              document.getElementById('sign-in-status').textContent = 'Signed in';
-              document.getElementById('sign-in').textContent = 'Sign out';
-              document.getElementById('account-details').textContent = JSON.stringify({
-                displayName: displayName,
-                email: email,
-                emailVerified: emailVerified,
-                phoneNumber: phoneNumber,
-                photoURL: photoURL,
-                uid: uid,
-                accessToken: accessToken,
-                providerData: providerData
-              }, null, '  ');
-            });
+            
+            document.getElementById("profileImage").src= photoURL; 
+            document.getElementById("usuario").innerHTML = displayName;
+            document.getElementById("usuario2").innerHTML = displayName;
           } else {
             // User is signed out.
             document.getElementById('sign-in-status').textContent = 'Signed out';
@@ -62,11 +54,51 @@
         initApp()
       });
     </script>
+  
   </head>
   <body>
-    <h1>Welcome to My Awesome App</h1>
+   
     <div id="sign-in-status"></div>
     <div id="sign-in"></div>
     <div id="account-details"></div>
+
+   
+
+ 
+
+    <div class="container">
+      <header class="blog-header py-3">
+        <div class="row flex-nowrap justify-content-between align-items-center">
+          
+         <p id="usuario2"></p>
+          <div class="col-4 d-flex justify-content-end align-items-center">
+            <img id="profileImage" class="rounded-circle"   width="40" height="40">
+           
+          </div>
+        </div>
+      </header>
+
+     
+
+      <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
+        <div class="col-md-6 px-0">
+          <h1 class="display-4 font-italic"> Hola <p id="usuario"></p> Bienvenido a Votá tu comparsa</h1>
+          <p class="lead my-3">Ya podes elegir tu comparsa favorita.</p>
+          <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Seleccioná la opción Votar...</a></p>
+          <button class="btn"><a href="vote">Votar</a></button>
+        </div>
+      </div>
+
+    
+ 
+         
+
+  
+
+
+     <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script> 
+    <!-- Compiled and minified JavaScript -->
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
