--- a/functions/views/vote.hbs
+++ b/functions/views/vote.hbs
@@ -175,11 +175,14 @@
     
 
 
+
     
       
     
   <!-- development version, includes helpful console warnings -->
-		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+		<script src="js/vue.min.js"></script>
+
+    
 		<script>
 		var app4 = new Vue({
 			el: '#app-4',
